@@ -1,13 +1,11 @@
 package basic.multithreading;
-/**
- * This class demonstrates the use of {@code sleep()} and {@code join()} functions of Thread class.
- */
-public class SleepJoinDemo {
+
+public class VirtualThreadDemo {
 
     public static void main(String[] args) throws InterruptedException {
 
         // Creating thread using lambda.
-        Thread t1 = new Thread(() -> {
+        Thread.startVirtualThread(() -> {
             try {
                 Thread.sleep(1000);
                 System.out.println(Thread.currentThread().getName());
@@ -16,7 +14,7 @@ public class SleepJoinDemo {
             }
         });
 
-        Thread t2 = new Thread(() -> {
+        Thread.startVirtualThread(() -> {
             try {
                 Thread.sleep(2000);
                 System.out.println(Thread.currentThread().getName());
@@ -25,14 +23,7 @@ public class SleepJoinDemo {
             }
         });
 
-        // Starts thread asynchronously.
-        t1.start();
-        t2.start();
-
-        // Main thread waits for t1 to finish.
-        t1.join();
-
+        Thread.sleep(3000);
         System.out.println(Thread.currentThread().getName());
-
     }
 }
